@@ -19,7 +19,7 @@ class InitialPriceEventListener_settleInitialPrice_eventApiTest extends Framewor
         //then
         await().until(() -> !priceFixtures.itemPriceRepo.findByItemId(payload.concertId()).isEmpty());
         sharedFixtures.inTransaction(() ->
-                assertThatPrice(priceFixtures.itemPriceRepo.findByItemId(payload.concertId()).get(0))
+                assertThatPrice(priceFixtures.itemPriceRepo.findByItemId(payload.concertId()).getFirst())
                         .isPersistedIn(priceFixtures.itemPriceRepo, SINGULAR)
                         .hasItemId(payload.concertId())
                         .hasPrice(105_00)
